feat: P4ADEV-4653 use dynamic email sender configuration per broker (#586)