@@ -1,9 +1,9 @@
-import org.openapitools.generator.gradle.plugin.tasks.GenerateTask
-import org.springframework.boot.gradle.tasks.bundling.BootJar
-import com.github.jk1.license.render.*
-import com.github.jk1.license.filter.*
+import com.github.jk1.license.filter.SpdxLicenseBundleNormalizer
+import com.github.jk1.license.render.XmlReportRenderer
 import org.gradle.api.tasks.testing.logging.TestExceptionFormat
 import org.gradle.api.tasks.testing.logging.TestLogEvent
+import org.openapitools.generator.gradle.plugin.tasks.GenerateTask
+import org.springframework.boot.gradle.tasks.bundling.BootJar
 
 plugins {
     java
@@ -67,6 +67,7 @@ tasks {
     }
     test {
         jvmArgs("-javaagent:${mockitoAgent.asPath}")
+        jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
         testLogging.events = setOf(TestLogEvent.FAILED)
         testLogging.exceptionFormat = TestExceptionFormat.FULL
     }
